# rm_simple_move

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/rm_simpal_move/: simple_move.hpp
launch/: simple_move.launch.py
src/: simple_move.cpp
test/: move_test.py
